--- a/src/WebApp/Pages/Notesheets/Index.cshtml
+++ b/src/WebApp/Pages/Notesheets/Index.cshtml
@@ -2,10 +2,10 @@
 @model WebApp.Pages.Notesheets.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Manage Notesheet";
 }
 
-<h1>Index</h1>
+
 
 <p>
     <a asp-page="Create">Create New</a>
