--- a/src/WebApp/Pages/Notesheets/Create.cshtml
+++ b/src/WebApp/Pages/Notesheets/Create.cshtml
@@ -25,22 +25,26 @@
             </div>
             <div class="form-group">
                 <label asp-for="Notesheet.Type" class="control-label">Type</label>
-                <input asp-for="Notesheet.Type" class="form-control" />
+                @*<input asp-for="Notesheet.Type" class="form-control" />*@
+                <select asp-for="Notesheet.Type" class="form-control" asp-items="Model.TypeOptions"></select>
                 <span asp-validation-for="Notesheet.Type" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Notesheet.Description" class="control-label">Description</label>
-                <input asp-for="Notesheet.Description" class="form-control" />
+                @*<input asp-for="Notesheet.Description" class="form-control" />*@
+            <textarea asp-for="Notesheet.Description" class="form-control" rows="3" cols="50"></textarea>
                 <span asp-validation-for="Notesheet.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Notesheet.ScopeOfWork" class="control-label">Scope of Work</label>
-                <input asp-for="Notesheet.ScopeOfWork" class="form-control" />
+                @*<input asp-for="Notesheet.ScopeOfWork" class="form-control" />*@
+                <textarea asp-for="Notesheet.ScopeOfWork" class="form-control" rows="3" cols="50"></textarea>
                 <span asp-validation-for="Notesheet.ScopeOfWork" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Notesheet.Technical_Specification" class="control-label">Technical Specification</label>
-                <input asp-for="Notesheet.Technical_Specification" class="form-control" />
+                @*<input asp-for="Notesheet.Technical_Specification" class="form-control" />*@
+                <textarea asp-for="Notesheet.Technical_Specification" class="form-control" rows="3" cols="50"></textarea>
                 <span asp-validation-for="Notesheet.Technical_Specification" class="text-danger"></span>
             </div>
             <div class="form-group">
