--- a/src/WebApp/Pages/Notesheets/Edit.cshtml
+++ b/src/WebApp/Pages/Notesheets/Edit.cshtml
@@ -15,7 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Notesheet.ReferenceNo" class="control-label"></label>
-                <input asp-for="Notesheet.ReferenceNo" class="form-control" />
+                <input asp-for="Notesheet.ReferenceNo" class="form-control" readonly />
                 <span asp-validation-for="Notesheet.ReferenceNo" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -30,17 +30,21 @@
             </div>
             <div class="form-group">
                 <label asp-for="Notesheet.Description" class="control-label"></label>
-                <input asp-for="Notesheet.Description" class="form-control" />
+                @*<input asp-for="Notesheet.Description" class="form-control" />*@
+                <textarea asp-for="Notesheet.Description" class="form-control"  rows="3" cols="50"></textarea>
                 <span asp-validation-for="Notesheet.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Notesheet.ScopeOfWork" class="control-label"></label>
-                <input asp-for="Notesheet.ScopeOfWork" class="form-control" />
+                @*<input asp-for="Notesheet.ScopeOfWork" class="form-control" />*@
+                <textarea asp-for="Notesheet.ScopeOfWork" class="form-control" rows="3" cols="50"></textarea>
                 <span asp-validation-for="Notesheet.ScopeOfWork" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Notesheet.Technical_Specification" class="control-label"></label>
-                <input asp-for="Notesheet.Technical_Specification" class="form-control" />
+                @*<input asp-for="Notesheet.Technical_Specification" class="form-control" />*@
+                <textarea asp-for="Notesheet.Technical_Specification" class="form-control" rows="3" cols="50"></textarea>
+
                 <span asp-validation-for="Notesheet.Technical_Specification" class="text-danger"></span>
             </div>
             
