--- a/src/WebApp/Pages/Notesheets/Edit.cshtml
+++ b/src/WebApp/Pages/Notesheets/Edit.cshtml
@@ -24,8 +24,9 @@
                 <span asp-validation-for="Notesheet.PackageName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Notesheet.Type" class="control-label"></label>
-                <input asp-for="Notesheet.Type" class="form-control" />
+                <label asp-for="Notesheet.Type" class="control-label">Type</label>
+                @*<input asp-for="Notesheet.Type" class="form-control" />*@
+                <select asp-for="Notesheet.Type" class="form-control" asp-items="Model.TypeOptions"></select>
                 <span asp-validation-for="Notesheet.Type" class="text-danger"></span>
             </div>
             <div class="form-group">
