--- a/src/WebApp/Pages/Notesheets/Details.cshtml
+++ b/src/WebApp/Pages/Notesheets/Details.cshtml
@@ -4,15 +4,19 @@
 @{
     ViewData["Title"] = "Details";
 }
-<div >
+<div>
     <h1> Notesheet Details</h1>
     <br />
     <br />
-
+    @*<div class="row">*@
+        <img src="~/posoco.jpg" alt="" >
+    @*</div>*@
+    <br />
+    <br />
     <div class="row">
 
-        <div class="col-sm-8" > <span class="font-weight-bold">Reference No:</span>@Html.DisplayFor(model => model.Notesheet.ReferenceNo)</div>
-        <div class="col-sm-4" ><span class="font-weight-bold">Date:</span>@Html.DisplayFor(model => model.Date)</div>
+        <div class="col-sm-6"> <span class="font-weight-bold">Reference No:</span>@Html.DisplayFor(model => model.Notesheet.ReferenceNo)</div>
+        <div class="col-sm-6"><span class="font-weight-bold">Date:</span>@Html.DisplayFor(model => model.Date)</div>
     </div>
 
     <hr />
@@ -50,6 +54,87 @@
             @Html.DisplayFor(model => model.Notesheet.Technical_Specification)
         </dd>
         <dt class="col-sm-12">
+            6.Estimated Cost:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.EstimatedCost)
+        </dd>
+        <dt class="col-sm-12">
+            7.Bill of Quantities:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.BillOfQuantity)
+        </dd>
+        <dt class="col-sm-12">
+            8.Guarantee/Warranty:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.Guarantee_Warranty)
+        </dd>
+        <dt class="col-sm-12">
+            9.Payment terms & CPG:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.Payment_Terms_CPG)
+        </dd>
+        <dt class="col-sm-12">
+            10.Mode of Tender preferred:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.ModeOfTerm)
+        </dd>
+        <dt class="col-sm-12">
+            11.Type of Bidding process preferred:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.TypeOfBidding)
+        </dd>
+        <dt class="col-sm-12">
+            12.List Of Parties:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.ListOfParties)
+        </dd>
+        <dt class="col-sm-12">
+            13.GeM Non-Availability Certificate:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.GeMNonAvailabilityCertificate)
+        </dd>
+        <dt class="col-sm-12">
+            14.Work Completion Schedule/Delivery time schedule:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.WorkCompletionSchedule)
+        </dd>
+        <dt class="col-sm-12">
+            15.Special Conditions of Contract:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.SpecialConditionsOfContract)
+        </dd>
+        <dt class="col-sm-12">
+            16.Budget Provision:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.BudgetProvision)
+        </dd>
+        <dt class="col-sm-12">
+            17.Proposal for which Approval sought:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.ProposalForApproval)
+        </dd>
+        <dt class="col-sm-12">
+            18.Approving Authority:
+        </dt>
+        <dd class="col-sm-12">
+            @Html.DisplayFor(model => model.Notesheet.ApprovingAuthority)
+        </dd>
+
+
+
+        <dt class="col-sm-12">
             7.Created:
         </dt>
         <dd class="col-sm-12">
@@ -58,12 +143,11 @@
 
     </dl>
 </div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Notesheet.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>
-@section Scripts{
-    <style>
-        
-    </style>
-}
+    <div>
+        <a asp-page="./Edit" asp-route-id="@Model.Notesheet.Id">Edit</a> |
+        <a asp-page="./Index">Back to List</a>
+    </div>
+    @section Scripts{
+        <style>
+        </style>
+    }
