--- a/src/WebApp/Pages/Notesheets/Index.cshtml
+++ b/src/WebApp/Pages/Notesheets/Index.cshtml
@@ -100,6 +100,11 @@
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.print.min.js"></script>
     <script>
 
+        function strtrunc(str, max, add) {
+            add = add || '...';
+            return (typeof str === 'string' && str.length > max ? str.substring(0, max) + add : str);
+        };
+
         $(document).ready(function () {
             // https://datatables.net/examples/api/multi_filter.html
             // Setup - add a text input to each footer cell
@@ -116,9 +121,18 @@
                 "order": [[0, "asc"]],
                 buttons: ['pageLength', 'copy', 'csv', 'excel', 'pdf', 'print'],
 
-                fixedColumns: {
-                    heightMatch: 'auto'
-                }
+                'columnDefs': [
+                    {
+                        'targets': [3, 4, 5],
+                        'render': function (data, type, full, meta) {
+                            if (type === 'display') {
+                                data = strtrunc(data, 20);
+                            }
+
+                            return data;
+                        }
+                    }
+                ],
             });
 
             var r = $('#users_table tfoot tr');
