--- a/src/WebApp/Pages/Notesheets/Create.cshtml
+++ b/src/WebApp/Pages/Notesheets/Create.cshtml
@@ -168,5 +168,16 @@
             }
             //alert("gg");
         }
+        $(document).ready(function () {
+            alert("Hello");
+            var multipleCancelButton = new Choices('#ProposalOptions', {
+                removeItemButton: true,
+                maxItemCount: 20,
+                searchResultLimit: 20,
+                renderChoiceLimit: 20
+            });
+            
+        });
+        
     </script>  
 }
